Ajout du score des joueurs